--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 <div class="at-user__avatar">
 <img src="https://cdn.discordapp.com/avatars/170373673339977728/93bad71d5e95119f025a863e9426909e.png?size=4096">
 </div>
-<div class="at-user__name">victvr</div>
-    <div class="nickname">wanted</div>
+<div class="at-user__name">wanted</div>
+    <div class="nickname">victvr</div>
     <div class="badges">
     <div class="badge" style="background-image: url('https://cdn.discordapp.com/badge-icons/2ba85e8026a8614b640c2837bcdfe21b.png');" data-tooltip="Assinante desde 17 de jan.
     de 2023"></div>
+    <div class="badge" style="background-image: url('https://cdn.discordapp.com/attachments/1165349889295790112/1165764374292606986/blue_pigzin.png?ex=654809ad&is=653594ad&hm=8546c8ee69d4ab30345d227b75f53a733e9e2ca399022e0d2d0787d3d59c1ea8&');"></div>
     <div class="badge" style="background-image: url('https://raw.githubusercontent.com/kauexz/badges/main/svg/boosts/discordboost3.svg');" data-tooltip="Impulsionando o servidor
     desde 4 de jul. de 2023"></div>
                    
