--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="theme-color" content="#" />
   <meta property="og:image"
-    content="https://media.discordapp.net/attachments/1153128792269795478/1161876895802073130/orange_abobora2.gif?ex=6539e52e&is=6527702e&hm=3d5c459524dddfc61627900f518ccea02337d85931a13e1cadd7d8b17f692636&=&width=112&height=120">
+    content="https://cdn.discordapp.com/attachments/1165349889295790112/1165767104868384768/1_.png?ex=65480c38&is=65359738&hm=5fff8c11a0689c0d316673153323598e0cbed2887866314b33ffbc9cfa2c7ab4&">
   <link rel="shortcut icon"
     href="https://cdn.discordapp.com/attachments/1165349889295790112/1165746062854738060/25.png?ex=6547f89f&is=6535839f&hm=7805db1227c453cf42478266d95fc0f73f728bffd6b1a74ece557b5c5f685f64&" type="image/gif">
   <meta property="og:title" content="" />
