--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <video autoplay loop muted>
     <source
-      src="https://cdn.discordapp.com/attachments/1022321122181652541/1161406679477387424/x2mate.com-Ichigo_Final_Getsuga_Tenshou_Bleach_4K_Live_Wallpaper-1080p60.mp4?ex=65382f42&is=6525ba42&hm=adffb8ef0f13f9be1ac33b84&">
+      src="https://cdn.discordapp.com/attachments/1140918144039391232/1165789967289692281/taiji-yin-yang-moon-moewalls-com.mp4?ex=65482183&is=6535ac83&hm=3c142c934c2cbfb1a4c63aa761a87ca5a2444b0a11e8538491cc57957d2dbee8&">
 
   </video>
   <div class="profile-box">
