mudança na bio dnv kk

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="about-me" id="about-me"></div>
   </div>
   <script>
-    const aboutMeText = "1337";
+    const aboutMeText = "@vxcctxr";
     const aboutMeElement = document.getElementById("about-me");
     let index = 0;
     const typingEffect = setInterval(() => {
