--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
 <div class="overlay fullscreen">
 	<label for="overlay-toggle" onclick="audioPlay(); ">
-		<span class="overlayno-hover hover" style="font-family: monospace; font-size: 0.6em;">God, spare me.</span>
 		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">God, spare me.</span>
 	</label>
 </div>
@@ -70,7 +69,7 @@
     <div class="about-me" id="about-me"></div>
   </div>
   <script>
-    const aboutMeText = "@vxcctxr";
+    const aboutMeText = "";
     const aboutMeElement = document.getElementById("about-me");
     let index = 0;
     const typingEffect = setInterval(() => {
