--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <img src="https://cdn.discordapp.com/avatars/480396230892060702/7c0b542e98893cc133b8857d86638c85.png?size=4096">
 </div>
 <div class="at-user__name">wanted</div>
-    <div class="nickname">vic5r</div>
+    <div class="nickname">vict5r</div>
     <div class="badges">
     <div class="badge" style="background-image: url('https://cdn.discordapp.com/badge-icons/2ba85e8026a8614b640c2837bcdfe21b.png');" data-tooltip="Assinante desde 25 de nov.
     de 2022"></div>
@@ -65,7 +65,7 @@
     </div>
     
     
-    <div class="about-me" id="about-me"></div>
+    <div class="about-me" SCAM id="about-me"></div>
   </div>
   <script>
     const aboutMeText = "";
