--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     
     
-    <div class="about-me" SCAM id="about-me"></div>
+    <div class="about-me" id="about-me"></div>
   </div>
   <script>
     const aboutMeText = "";
