--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	function audioPlay() {
 			var audio = document.getElementById("audio");
 			audio.volume = 0.5;
-            audio.currentTime = 52;
+            audio.currentTime = 1;
 			audio.play();
 	}
 </script>
 
 <audio loop preload="auto" id="audio">
-	<source src="elementos.mp3" type="audio/mpeg">
+	<source src="leall.mp3" type="audio/mpeg">
 </audio>
 
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
