--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
 <div class="overlay fullscreen">
 	<label for="overlay-toggle" onclick="audioPlay(); ">
-		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">God, spare me.</span>
+		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">Simpes, sincerto, curto e claro.</span>
 	</label>
 </div>
 
