--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
 
 <head>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="theme-color" content="#" />
