--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
 <div class="overlay fullscreen">
 	<label for="overlay-toggle" onclick="audioPlay(); ">
-		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">Simpes, sincerto, curto e claro.</span>
+		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">Simples, sincero, curto e claro.</span>
 	</label>
 </div>
 
@@ -49,7 +49,7 @@
   </video>
   <div class="profile-box">
 <div class="at-user__avatar">
-<img src="https://cdn.discordapp.com/avatars/480396230892060702/7c0b542e98893cc133b8857d86638c85.png?size=4096">
+<img src="https://cdn.discordapp.com/avatars/480396230892060702/41d13723edd0f67362a15a5a37d16187.webp?size=4096">
 </div>
 <div class="at-user__name">wanted</div>
     <div class="nickname">vict5r</div>
