--- a/w.html
+++ b/w.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <script src="blocker.js"></script>
   <title>141 Bypass</title>
   <head>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
@@ -13,6 +14,7 @@
 
 & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
   </script>
-  <script src="blocker.js"></script>
 </body>
 </html>
+
+cls
