--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
 <div class="overlay fullscreen">
 	<label for="overlay-toggle" onclick="audioPlay(); ">
-		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">Simples, sincero, curto e claro.</span>
+		<span class="overlayhover hover" style="font-family: monospace; font-size: 0.6em;">auri sacra fames</span>
 	</label>
 </div>
 
@@ -50,7 +50,7 @@
 <img src="https://cdn.discordapp.com/avatars/480396230892060702/41d13723edd0f67362a15a5a37d16187.webp?size=4096">
 </div>
 <div class="at-user__name">wanted</div>
-    <div class="nickname">vict5r</div>
+    <div class="nickname">h436b5gjnuy7i9685jkim7u0on9</div>
     <div class="badges">
     <div class="badge" style="background-image: url('https://cdn.discordapp.com/badge-icons/2ba85e8026a8614b640c2837bcdfe21b.png');" data-tooltip="Assinante desde 25 de nov.
     de 2022"></div>
