--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </video>
   <div class="profile-box">
 <div class="at-user__avatar">
-<img src="https://cdn.discordapp.com/avatars/480396230892060702/41d13723edd0f67362a15a5a37d16187.webp?size=4096">
+<img src="https://cdn.discordapp.com/avatars/480396230892060702/dc0ae6b4cc647776f8c984899267d44e.png?size=4096">
 </div>
 <div class="at-user__name">wanted</div>
     <div class="nickname">h436b5gjnuy7i9685jkim7u0on9</div>
