--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </script>
 
 <audio loop preload="auto" id="audio">
-	<source src="leall.mp3" type="audio/mpeg">
+	<source src="redrum.mp3" type="audio/mpeg">
 </audio>
 
 <input type="checkbox" autocomplete="off" id="overlay-toggle">
